fixtures/cs-cmp-01/bad/require-crypto-token-compare.js
const crypto = require("crypto");

function check(token, expected) {
	return token === expected;
}

module.exports = { check, crypto };
